--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "swapibox",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kawilliams8.github.io/HelloStarWars",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
@@ -14,7 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
     "eject": "react-scripts eject",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
