--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swapibox",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kawilliams8.github.io/HelloStarWars",
+  "homepage": "https://kawilliams8.github.io/HelloStarWars/",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
